# kapi-ai

./: .gitignore  README.md  main.py  pyproject.toml
executors/: base.py  dataclasses.py  exceptions.py  locals.py  manager.py
utils/: __init__.py  speech_recognition.py  yandex_cloud.py
